--- a/Front/css/style.css
+++ b/Front/css/style.css
@@ -4,10 +4,55 @@ html,body{
 }
 
 body {
+    height: 100%;
     margin: 0;
     background-color:rgb(33, 39, 41);
-    font-family: Calibri
+    font-family: Calibri;
+    
 }
+
+
+
+#sideBar {
+    overflow: auto;
+    position: absolute;
+    width: 15%;
+    height: 100%;
+    background-color: rgb(23, 29, 31);
+}
+
+#onlineUsersContainer {
+    padding-left: 10px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 35px;
+    width: 100%;
+    background-color: rgb(73, 79, 90);
+    display: flex;
+    align-items: center;
+    box-shadow: 0px 2px 3px #494f5a;
+}
+
+#сircle {
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background-color: rgb(80, 160, 0);
+}
+
+#onlineNow {
+    margin-left: 3px;
+}
+
+#intOnline {
+    color: rgb(80, 160, 0);
+}
+
+#listUsers {
+    overflow-y: auto;
+
+} 
 
 .main {
     overflow: auto;
@@ -15,7 +60,7 @@ body {
     width: 85%;
     right: 0;
     height: 100%;
-    border-left: 3px solid rgb(41, 51, 58);
+    
 }
 
 #upBar {
@@ -23,7 +68,7 @@ body {
     height: 35px;
     width: 100%;
     top: 0;
-    background-color: rgb(93, 99, 110) ;
+    background-color: rgb(73, 79, 90) ;
 } 
 
 #containerUsername {
@@ -43,28 +88,35 @@ body {
 }
 
 #divMessages {
+    padding-left: 5px;
     margin-top: 35px;
     width: 100%;
-    height: calc(100% - 70px);
+    overflow-wrap: break-word;
+    height: calc(100% - 35px);
     overflow-y: auto; 
+    padding-bottom: 20.1px;
+    /* border-left: 3px solid rgb(41, 51, 58); */  
 }
 
-.msg {
+.msgContainer {
     color: whitesmoke;
     font-family: Calibri;
 }
 
-.msg:hover {
+.msgContainer:hover {
     background-color:rgb(61, 71, 78) ;
+}
+
+.msg {
+    max-width: 100%;
+    max-height: unset;
 }
 
 #containerSend {
     position: fixed;
-    
     bottom: 0px; 
     width: 85%;
     height: 35px;
-    
     right: 0;
 }
 
@@ -97,5 +149,9 @@ body {
     border-radius: 90px;
     color: rgb(5, 5, 5);
 }
+
+
+
+
 
 
