--- a/Front/css/style.css
+++ b/Front/css/style.css
@@ -51,16 +51,20 @@ body {
 
 #listUsers {
     overflow-y: auto;
-
+    left: 0;
+    top: 50px;
+    height: 100%;
+    background-color: rgb(82, 74, 64);
+    width: 100%;
+    color: blue;
 } 
 
 .main {
-    overflow: auto;
+    overflow-y: auto;
     position: absolute;
     width: 85%;
     right: 0;
     height: 100%;
-    
 }
 
 #upBar {
@@ -87,14 +91,23 @@ body {
     color: rgb(57, 64, 66);
 }
 
+#divMessagesContainer {
+    overflow-y: auto; 
+    height: calc(100% - 70px);
+    margin-top: 35px;
+    margin-bottom: 35px;
+}
+
 #divMessages {
     padding-left: 5px;
+    margin-bottom: 35px;
+    /* margin-right: 5px; */
     margin-top: 35px;
-    width: 100%;
+    width: 99.5%;
     overflow-wrap: break-word;
-    height: calc(100% - 35px);
-    overflow-y: auto; 
-    padding-bottom: 20.1px;
+    height: calc(100% - 70px);
+    
+    /* padding-bottom: 20.1px; */
     /* border-left: 3px solid rgb(41, 51, 58); */  
 }
 
@@ -110,6 +123,11 @@ body {
 .msg {
     max-width: 100%;
     max-height: unset;
+}
+
+.time {
+    padding-left: 50px;
+    color: rgb(33, 39, 41);
 }
 
 #containerSend {
