--- a/Front/css/style.css
+++ b/Front/css/style.css
@@ -31,7 +31,7 @@ body {
     background-color: rgb(73, 79, 90);
     display: flex;
     align-items: center;
-    box-shadow: 0px 2px 3px #494f5a;
+    /* box-shadow: 0px 2px 3px #494f5a; */
 }
 
 #сircle {
@@ -45,7 +45,7 @@ body {
     margin-left: 3px;
 }
 
-#intOnline {
+.intOnline {
     color: rgb(80, 160, 0);
 }
 
@@ -54,9 +54,9 @@ body {
     left: 0;
     top: 50px;
     height: 100%;
-    background-color: rgb(82, 74, 64);
+    background-color: rgb(23, 29, 31);
     width: 100%;
-    color: blue;
+    color: rgb(97, 97, 97);
 } 
 
 .main {
